--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "unplugin-vue-components": "^29.0.0",
     "unplugin-vue-router": "^0.15.0",
     "vite": "^7.1.5",
+    "vite-plugin-pwa": "^1.2.0",
     "vite-plugin-vuetify": "^2.1.2"
   }
 }
