--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -38,6 +38,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build
+        env:
+          VITE_BASE_PATH: ${{ steps.pages.outputs.base_path }}
         run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v5
