--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --fix",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "lint": "eslint . --fix"
   },
   "dependencies": {
     "@fontsource/roboto": "5.2.7",
@@ -22,7 +20,6 @@
     "@vitejs/plugin-vue": "^6.0.1",
     "eslint": "^9.35.0",
     "eslint-config-vuetify": "^4.2.0",
-    "gh-pages": "^6.3.0",
     "sass-embedded": "^1.92.1",
     "unplugin-fonts": "^1.4.0",
     "unplugin-vue-components": "^29.0.0",
